fix minor layout issues

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
 @layer base {
     canvas {
         width: 100%;
-        height: 30vh;
+        height: 40vh;
         margin: 0;
         padding: 0;
     }
